--- a/Thesis/implementatie.tex
+++ b/Thesis/implementatie.tex
@@ -300,7 +300,7 @@ die werden bekomen aan de hand van pixelgebaseerde similariteitsmaten. Voor de
 rangschikking in figuur~\ref{fig:tests_banaan_2} en figuur~\ref{fig:tests_banaan_3}
 werden kleurgebaseerde maten gebruikt. Het valt op dat het glad SCT-histogram in dit
 geval betere resultaten geeft dan het Irb-histogram. Verder zien we ook dat
-het glad spatiaal SCT-histogram hier minder goede resultaten geeft, terwijl het
+het glad SCT-centrumhistogram hier minder goede resultaten geeft, terwijl het
 glad SCT-randhistogram wel vrij behoorlijk presteert.
 
 \begin{figure}[bp]
@@ -499,6 +499,6 @@ op basis van $M_{I_3}$ in combinatie met (a) het Irb-histogram, (b) het SCT-hist
 \end{minipage}
 }
 \caption{\label{fig:tests_banaan_3}De eerst tien beelden van de gerangschikte zoekresultaten voor ``banaan'' 
-op basis van $M_{I_3}$ in combinatie met (a) het glad SCT-histogram, (b) het glad spatiaal SCT-histogram en 
+op basis van $M_{I_3}$ in combinatie met (a) het glad SCT-histogram, (b) het glad SCT-centrumhistogram en 
 (c) het glad SCT-randhistogram.}
 \end{figure}
